term/src/ui/snapshots/r_lanterm__ui__app__tests__main_view_with_popover.snap
---
source: term/src/ui/./app_tests.rs
expression: terminal.backend()
---
"╔═══════════════════════╗                                                  ╔═══════════════════════╗"
"║                       ║                                                  ║                       ║"
"║  r-lanterm            ║                                                  ║  Devices ▼            ║"
"║                       ║                                                  ║                       ║"
"╚═══════════════════════╝                                                  ╚═══════════════════════╝"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│  IP                HOSTNAME           VENDOR            MAC                OPEN PORTS            │"
"│                                                                                              █   │"
"│  10.10.10.1        hostname           mac               00:00:00:00:00:00  80:http           █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│  10.10.10.2 [YOU]  dev2_hostname      linux             ff:ff:ff:ff:ff:ff  80:http           █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                        ╔════════════════════════════════════════════════╗                    █   │"
"│                        ║                                                ║                    █   │"
"│                        ║                                                ║                    █   │"
"│                        ║              Test popover message              ║                    █   │"
"│                        ║                                                ║                    █   │"
"│                        ║                                                ║                    █   │"
"│                        ╚════════════════════════════════════════════════╝                    █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              █   │"
"│                                                                                              ║   │"
"│                                                                                              ║   │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║                        (q) quit | (v) change view | (enter) manage device                        ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
